<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="16dp">

    <data>

        <variable
            name="selectedPokemon"
            type="com.example.android.pokemonapp.network.pokemon.PokemonDto" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.search.PokemonSearchFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".screens.search.PokemonSearchFragment">
            <androidx.cardview.widget.CardView
                android:id="@+id/pokemon_cv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout2"
                app:cardCornerRadius="16dp">
                <ImageView
                    android:id="@+id/pokemon_img"
                    style="@style/pokemon_detail_image"
                    app:imageUrl="@{selectedPokemon.sprite.spriteUrl}"
                    tools:srcCompat="@drawable/loading_animation"
                    android:background="@color/light_yellow"
                    />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/pokemon_cv"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/pokemon_large_text"
                    android:layout_marginStart="16dp"
                    android:text="@string/nr"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_nr"
                    style="@style/pokemon_large_text"
                    android:textStyle="bold"
                    android:text="@{Integer.toString(selectedPokemon.number)}"
                    tools:text="001" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_name"
                style="@style/pokemon_large_text"
                android:layout_marginStart="16dp"
                android:text="@{selectedPokemon.name}"
                app:layout_constraintStart_toEndOf="@+id/pokemon_cv"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:text="Name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:context=".screens.search.PokemonSearchFragment">

                <TextView
                    style="@style/pokemon_small_text"
                    android:text="@string/height"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_height"
                    style="@style/pokemon_small_text"
                    android:layout_marginStart="@dimen/s"
                    android:text="@{Integer.toString(selectedPokemon.height)}"
                    tools:text="100" />

                <TextView
                    style="@style/pokemon_small_text"
                    android:text="@string/cm" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:context=".screens.search.PokemonSearchFragment">

                <TextView
                    style="@style/pokemon_small_text"
                    android:text="@string/weight"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_weight"
                    style="@style/pokemon_small_text"
                    android:layout_marginStart="@dimen/s"
                    android:text="@{Double.toString(selectedPokemon.weight)}"
                    tools:text="50" />

                <TextView
                    style="@style/pokemon_small_text"
                    android:text="@string/kg" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>